# cheapshop

./: .gitignore  Cargo.toml  Readme.md
prices/: 00bc929c-e835-440d-9b92-7ed91e96a28f.json  cfcba7aa-e13a-441a-948d-d759141632d4.json  e4e3d270-56bf-4ea9-a090-2541ae5c2325.json
src/: config.rs  main.rs
src/models/: article.rs  file_store.rs  file_stores.rs  item_name.rs  items.rs  mod.rs  price.rs  shop.rs
src/routes/: articles.rs  main_page.rs  mod.rs  prices.rs  shops.rs
src/views/: articles.rs  main.rs  mod.rs  prices.rs  shared.rs  shops.rs
