[package]
name = "cheapshop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
maud = { version = "*", features = ["rocket"] }
rocket = "0.4.7"
serde = {version = "1.0.126", features=["derive"]}
serde_json = "1.0.64"
jfs = {git = "https://github.com/flosse/rust-json-file-store"}